--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,11 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Movies page
+    Warranties page
 {% endblock %}
 
 {% block body %}
-    {% for movie in movies %}
-        <li>{{movie}}</li>
+    {% for warranty in warranties %}
+        <li>{{warranty}}</li>
     {% endfor %}
+    <p>w template</p>
 {% endblock %}
