--- a/public/views/notification-panel.html.twig
+++ b/public/views/notification-panel.html.twig
@@ -46,5 +46,9 @@
             <div class="detail" id="detail_warranty_period"></div>
             <div class="detail_name">Okres gwarancji</div>
         </div>
+        <div class="detail_container">
+            <div class="detail" id="detail_tags"></div>
+            <div class="detail_name">Tagi</div>
+        </div>
     </div>
 </div>
