--- a/public/views/warranty-template.html.twig
+++ b/public/views/warranty-template.html.twig
@@ -7,6 +7,7 @@
             <div id="purchaseDate"></div>
             <div id="warrantyPeriod"></div>
             <div id="receipt"></div>
+            <div id="tags"></div>
         </div>
     </div>
 </template>
