--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,18 +37,28 @@ body {
   font-size: 32px;
   line-height: 38px;
   display: flex;
-  align-items: end;
+  align-items: center;
   letter-spacing: 0.055em;
   margin: 0em 0em 0em 1em;
   color: white;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
 }
 .messages{
-  font-size: 20px;
+  font-size: 17px;
   font-weight: 500;
   line-height: 34px;
   height: 40px;
+  display: flex;
+  flex-direction: column;
+  max-width: 34em;
 }
+.messages > ul > li {
+  margin: 0;
+  justify-content: center;
+  color: white;
+  font-family: "Roboto";
+}
+
 
 form.login {
   display: flex;
