--- a/public/views/security/login.html.twig
+++ b/public/views/security/login.html.twig
@@ -27,7 +27,7 @@
                     {% endif %}
 
                     {% if app.user %}
-                        <div class="mb-3">
+                        <div>
                             You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
                         </div>
                     {% endif %}
