--- a/public/views/warranties.html.twig
+++ b/public/views/warranties.html.twig
@@ -38,6 +38,9 @@
                         <div id="purchaseDate">{{ warranty.purchaseDate|date('Y-m-d') }}</div>
                         <div id="warrantyPeriod">{{warranty.warrantyPeriod}}</div>
                         <div id="receipt">{{warranty.receipt}}</div>
+                        <div id="tags">{% for tag in warranty.tags %}
+        {{ tag.name }}
+    {% endfor %}</div>
                     </div>
                 </div>
             {% endfor %}
