Added tags in searched warranties, created UserDetails Entity that stores name and surname of user

--- a/public/views/account.html.twig
+++ b/public/views/account.html.twig
@@ -27,11 +27,11 @@
         <header>My account</header>
         <div id="info">
             <div class="detail_container">
-                <div class="detail">Puste</div>
+                <div class="detail">{{ userDetails.name }}</div>
                 <div class="detail_name">Name</div>
             </div>
             <div class="detail_container">
-                <div class="detail">Puste</div>
+                <div class="detail">{{ userDetails.surname }}</div>
                 <div class="detail_name">Surname</div>
             </div>
           <div class="detail_container">
