--- a/public/css/warranties.css
+++ b/public/css/warranties.css
@@ -209,6 +209,7 @@ section {
 }
 #info .detail_container {
   width: 100%;
+  height: 16%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -216,11 +217,12 @@ section {
 }
 #info .detail {
   width: 80%;
-  height: 4.5em;
+  height: 60%;
   border: 0.5px solid #ffffff;
   border-radius: 25px;
   color: white;
   margin: auto;
+  margin-bottom: 1%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -230,7 +232,7 @@ section {
   height: 1em;
   width: 80%;
   color: white;
-  margin-top: 6px;
+  margin-top: 0px;
   letter-spacing: 3px;
 }
 
@@ -455,7 +457,6 @@ section {
     font-size: 0.3em;
   }
   #info .detail_name {
-    margin-top: 6px;
     font-size: 0.25em;
   }
 }
