Fixes and dump.sql

--- a/public/views/notification-panel.html.twig
+++ b/public/views/notification-panel.html.twig
@@ -32,23 +32,23 @@
     <div id="info">
         <div class="detail_container">
             <div class="detail" id="detail_category"></div>
-            <div class="detail_name">Kategoria</div>
+            <div class="detail_name">Category</div>
         </div>
         <div class="detail_container">
             <div class="detail" id="detail_product_name"></div>
-            <div class="detail_name">Nazwa produktu</div>
+            <div class="detail_name">Product Name</div>
         </div>
         <div class="detail_container">
             <div class="detail" id="detail_purchase_date"></div>
-            <div class="detail_name">Data zakupu</div>
+            <div class="detail_name">Purchase Date</div>
         </div>
         <div class="detail_container">
             <div class="detail" id="detail_warranty_period"></div>
-            <div class="detail_name">Okres gwarancji</div>
+            <div class="detail_name">Warranty Period</div>
         </div>
         <div class="detail_container">
             <div class="detail" id="detail_tags"></div>
-            <div class="detail_name">Tagi</div>
+            <div class="detail_name">Tags</div>
         </div>
     </div>
 </div>
