Frontend code cleaniing

--- a/public/views/dashboard/edit_warranty.html.twig
+++ b/public/views/dashboard/edit_warranty.html.twig
@@ -43,7 +43,7 @@
             <i id="steady" class="fa-solid fa-box-archive">
                 <i id="animated" class="fa-solid fa-box-archive fa-bounce"></i>
             </i>
-            <a href="archive" class="button">Archive</a>
+            <a href="../archive" class="button">Archive</a>
         </li>
         <li id="li-account">
             <i id="steady" class="fa-solid fa-user">
