--- a/public/views/dashboard/edit_warranty.html.twig
+++ b/public/views/dashboard/edit_warranty.html.twig
@@ -19,7 +19,7 @@
     <link rel="stylesheet" type="text/css" href="../css/warranties.css"/>
     <link rel="stylesheet" type="text/css" href="../css/account.css" />
     <link rel="stylesheet" type="text/css" href="../css/add_warranty.css"/>
-    <script type="text/javascript" src="../js/scriptAccount.js" defer></script>
+    <script type="text/javascript" src="../js/scriptEdit.js" defer></script>
   </head>
   <body>
     <div class="base-container">
